public/css/app.css
/* ... */
.summit-date {
  margin-left: .5rem;
  padding-left: .5rem;
  border-left: 1px solid rgba(255, 255, 255, 1);
}

.san-francisco {
  background-image: url("https://d24wuq6o951i2g.cloudfront.net/img/events/id/332/3328075/assets/9da.bay-bridge-smaller.jpg");
}

.vienna {
  background-image: url("https://d24wuq6o951i2g.cloudfront.net/img/events/id/457/457398660/assets/33b.vienna-648626_1920.jpg");
}

.london {
  background-image: url("https://d24wuq6o951i2g.cloudfront.net/img/events/id/314/3143226/assets/c.H.dc.photo-1517484030358-fd0cca3d33d0")
}

#summits,
#talks {
  background: rgba(0, 0, 0, .9);
  color: rgba(255, 255, 255, 1);
}


/* Links */

.link {
  font-family: var(--Metropolis);
  font-weight: 600;
  color: #202020;
  font-size: .9rem;
  margin: 0 auto 1.5rem 0
}

.links-wrapper {
  padding: 2rem 1rem;
  border-radius: 8px;
  border-top: 15px solid;
}

.feed-wrapper {
  opacity: 0;
}

.feed-wrapper-title {
  font-weight: 600;
  font-size: .9rem;
  font-family: var(--Metropolis);
  padding-bottom: 1rem;
  border-bottom: 1px solid var(--mozDarkGrey);
  margin: 1rem 0 0 0;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.rss-icon {
  max-width: 1rem;
  margin: 0 .5rem 0 0;
  max-height: 1rem;
}

.feed-wrapper.feed-loaded {
  animation: fadeIn 0.3s ease forwards;
}

.rss-feeds-wrapper {
  border-color: var(--mozLightYellow);
}

.rand-links {
  border-color: var(--mozWarmRed);
}

.Moz-links {
  border-color: var(--mozNeonBlue);
}

.a-d-links {
  padding: 0;
}

.feed-list {
  padding: 1rem 0 0 0;
}

.feed-date {
  border-left: 1px solid var(--mozDarkGrey);
  margin-left: .5rem;
  padding-left: .5rem;
  color: var(--mozDarkGrey);
}

.feed-list-item {
  margin-bottom: 2rem;
}

.feed-list-link {
  color: rgba(0, 0, 0, 1);
  margin: 0 auto .15rem 0;
  font-size: .8rem;
  display: inline-block;
}

.feed-info {
  margin: 0 auto .5rem 0;
  font-size: .7rem;
}

.links-third {
  width: 45%;
  justify-content: space-between;
  margin: 0 auto auto auto;
}

.pseudos {
  border-bottom: 1px solid transparent;
  display: inline-block;
  padding: 2px;
  margin-left: -2px;
  margin-right: -2px;
  border-radius: 2px;
  text-decoration-color: transparent;
  box-shadow: 0 0 0 2px rgb(255, 255, 255, 0), 0 0 0 5px rgba(255, 255, 255, 0);
  transition: text-decoration-color 0.3s ease, box-shadow 0.3s ease;
}

.pseudos:hover {
  transition: text-decoration-color 0.3s ease, box-shadow 0.3s ease;
}

.pseudos:focus {
  outline: none;
  box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.158), 0 0 0px 5px rgba(19, 19, 19, 0.064);
  transition: text-decoration-color 0.3s ease, box-shadow 0.3s ease;
}

.white-link {
  color: rgba(255, 255, 255, 1);
}

.white-link:hover {
  text-decoration-color: rgba(255, 255, 255, 1);
}

.white-link:focus {
  box-shadow: 0 0 0 1px rgb(255, 255, 255, .9), 0 0 0 5px rgba(255, 255, 255, .1);
}

.dark-link {
  color: #202020;
}

.dark-link:hover {
  text-decoration-color: rgb(32, 32, 32);
}

.dark-link:focus,
.nested-text-link:focus {
  outline: none;
  box-shadow: 0 0 0 1px rgb(32, 32, 32, .9), 0 0 0 5px rgba(32, 32, 32, .1);
}

@media screen and (max-width: 1300px) {
  .fixed-header-full-title {
    margin-left: auto;
    margin-right: auto;
  }

  main::before {
    background-image: url("/img/landing-bg-bw.jpeg");
  }

  .desktop-nav {
    display: none !important;
  }

  .mobile-menu-fixed {
    display: flex;
  }

  .fixed-contact-menu,
  .mobile-menu-button {
    visibility: visible;
    pointer-events: all;
    display: flex;
  }

  .contact-link {
    color: rgba(0, 0, 0, 0);
    font-size: 1px;
    width: 1.15rem;
    height: 1rem;
    margin: auto;
    opacity: 1;
    transition: opacity 0.3s ease;
  }

  .mobile-menu-fixed {
    z-index: 1;
    transition: var(--mobileMenuTransitions);
  }
}

@media screen and (max-width: 1100px) {
  .fixed-header-full-title {
    margin-left: var(--padding);
    margin-right: auto;
  }
  
}

@media screen and (max-width: 900px) {

  .hide-900 {
    display: none !important;
  }
  .fixed-header-full-title {
    margin-left: calc(var(--padding) / 2);
  }

  .fixed-contact-menu {
    right: 2.25rem;
  }

  .desktop-nav {
    display: none;
  }

  .two-up,
  .links-thirds {
    flex-direction: column;
  }

  h3.links-hl {
    margin-bottom: 0;
  }

  .two-thirds,
  .publications-list,
  .flx-third.wrap-col-mobile,
  .links-third {
    width: 100%;
    max-width: var(--maxBodyCopyWidth);
    margin: var(--padding) auto;
  }

  /* .summit-image,
  .bio-image {
    margin-bottom: 0;
    margin-top: 0;
  } */
}

@media screen and (max-width: 860px) {
  .fixed-header-icons {
    width: 100%;
  }

  .fixed-header-full-title {
    max-width: 400px;
    display: none;
  }

  .thirds {
    flex-direction: column;
  }

  .flx-third,
  .bio-wrapper.flx-third {
    flex-direction: row;
    /* max-width: var(--maxBodyCopyWidth); */
    /* margin: auto auto calc(var(--padding)*2) auto; */
    width: 100%;
    max-width: 100%;
  }

  .summit-image,
  .bio-img {
    width: 200px;
    min-width: 200px;
    margin-right: var(--padding);
    margin-bottom: 0;
    margin-top: 0;
  }

  .summit-wrapper {
    margin-bottom: calc(var(--padding) * 2);
  }

  .bio-wrapper {
    display: flex;
    margin: auto auto calc(var(--padding) * 2) 0;
  }

  .bio-text {
    max-width: 100%;
  }

  .bio-content,
  .summit-info {
    justify-content: center;
  }
}

@media screen and (max-width: 600px) {
  .flx-third {
    flex-direction: column;
  }

  .bio-img {
    max-height: 10rem;
    min-width: 10rem;
    background-position: top center;
  }

  .summit-image {
    width: 100%;
    min-height: 8rem;
  }

  .bio-img,
  .summit-image {
    margin-top: 1rem;
    margin-bottom: 1rem;
  }
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

